added signup api and mailtrap email

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ MONGO_URL = ABC
 TOKEN_SECRET = eljslfkjiewrowiejlk32523523lkjslfj
 DOMAIN = http://localhost:3000
 
+MAIL_USER_ID = efcf5b02f03562
+MAIL_USER_PASSWORD = 2bbbe37c7be483
+
