added user verify, login , logout

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
-MONGO_URL = ABC
+MONGO_URL = mongodb+srv://nitishOfficial:nitish123@cluster0.hxbp9yn.mongodb.net/nextjs_auth 
 TOKEN_SECRET = eljslfkjiewrowiejlk32523523lkjslfj
 DOMAIN = http://localhost:3000
 
